--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!doctype html><html lang="ru"><head><meta charset="utf-8"/><link rel="icon" href="LOGO.svg"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="LOFT Мебель"/><title>LOFT Мебель</title><script type="type/javascript">(function(l) {
-        if (l.search[1] === '/') {
-          var decoded = l.search.split('&').map(function(s) {
-            return s.replace(/~and~/g,'&')
-          }).join('?');
-          window.history.replaceState(null, null,
-            l.pathname.slice(0, -1) + decoded + l.hash
-          )
-        }
-      }(window.location))</script><script defer="defer" src="/online-furniture-store/static/js/main.d026cd43.js"></script><link href="/online-furniture-store/static/css/main.40f9cea4.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="ru"><head><meta charset="utf-8"/><link rel="icon" href="LOGO.svg"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="LOFT Мебель"/><title>LOFT Мебель</title><script type="text/javascript">!function(n){if("/"===n.search[1]){var a=n.search.split("&").map((function(n){return n.replace(/~and~/g,"&")})).join("?");window.history.replaceState(null,null,n.pathname.slice(0,-1)+a+n.hash)}}(window.location)</script><script defer="defer" src="/online-furniture-store/static/js/main.d026cd43.js"></script><link href="/online-furniture-store/static/css/main.40f9cea4.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
